--- a/style.css
+++ b/style.css
@@ -381,7 +381,7 @@ nav h3 {
     width: 30%; 
     border-left: 1px solid #aeadad; 
     padding: 0 2vw; 
-    cursor: pointer; /* Change cursor to pointer on hover */
+    cursor: pointer; 
 } 
 
 #page5 {
